tests/errors/test_40.x
// Unknown type

fn main() -> int {

    let x: WHAT;

}